<resources>
    <string name="app_name">YMLibrary</string>

    <!--    rubi created by-->
    <string name="msg_no_application_available_to_view_pdf">No application available to view PDF</string>
    <string name="msg_no_application_available_to_send_email">No application available to send  Email</string>


    <!--login fields-->
    <string name="password">PASSWORD</string>
    <string name="userid">USER ID</string>
    <string name="login">Login</string>

    <!--login footer-->
    <string name="version_info">version</string>
    <string name="release_info">release</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="user_id_error">Please enter the user id.</string>
    <string name="password_error">Please enter the password.</string>

    <!--synchronize screen-->
    <string name="try_again">TRY AGAIN</string>
    <string name="sync_text">SYNCHRONIZING DATA\nPlease Wait...</string>
    <string name="sync_failed">SYNCHRONIZING DATA FAILED</string>
    <string name="logout">Logout</string>
    <string name="expected_delivery">Expected Delivery</string>

    <string-array name="task_history_elements">
        <item name="three_days">Last 3 days</item>
        <item name="one_week">Last 7 days</item>
        <item name="one_month">Last 1 month</item>
    </string-array>

</resources>
