<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutSync"
    >
    <TextView
        android:id="@+id/textViewSync"
        style="@style/normal_text_width_match"
        android:text="@string/sync_text"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginTop="12dp"/>
    <ImageView
        android:id="@+id/imgViewYamahaLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewSync"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_yamaha_logo" />



    <ProgressBar
        android:id="@+id/progressBarSync"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textViewSync"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <Button
        android:id="@+id/buttonSyncTryAgain"
        style="@style/xnormal_text_with_wrap"
        android:layout_marginTop="12dp"
        android:text="@string/try_again"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:layout_below="@+id/textViewSync"
        android:onClick="actionTryAgain"
        android:visibility="visible"/>

    <Button
        android:id="@+id/buttonLogout"
        style="@style/xnormal_text_with_wrap"
        android:layout_marginTop="12dp"
        android:text="@string/logout"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:layout_below="@+id/buttonSyncTryAgain"
        android:onClick="actionLogout"
        android:visibility="visible"/>

</RelativeLayout>
